sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:7: error: ';' expected but 'if' found.
      case false => echange(k,k+1) if (k>0){k-=1} else {k+=1}
                                   ^