sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var lgr=getNombreValeurs()-1
  var k=0
  while (k<lgr){
    plusPetit(k,k+1) match {
      case false => echange(k,k+1) if (k>0){k-=1} else {k+=1}
		  case true => k+=1
    }
    
    /*
    if (!plusPetit(k,k+1)){
      echange(k,k+1)
      if (k>0){
        k-=1
      }
      else {
        k+=1
      }
    }
    else if (plusPetit(k,k+1)){
      k+=1
    }
    else if (k==lgr){
      k=lgr+1
      
    }*/
  }
}